BACKLOG-10463 : renamed Digital Experience Manager to Jahia in the community installer

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
@@ -1,6 +1,6 @@
 afterInstall.description=Installation erfolgreich
 afterInstall.launchJahia=Web-Browser starten wenn der Server gestartet ist
-afterInstall.startTomcat=Digital Experience Manager Server starten
+afterInstall.startTomcat=Jahia Server starten
 afterInstall.title=Installation
 afterInstall.viewHowToInstall=Installationsanleitung öffnen
 appServer.ajpPort=AJP Connector Port (*)
@@ -43,13 +43,13 @@ externalToolSettings.title=Dokumenten-Management-Tools
 externalizedConfig.path=Konfiguration-Pfad
 externalizedConfig.title=Runtime-Daten und Konfiguration
 externalizedData.path=Runtime-Daten Pfad
-externalizedDataAndConfig.description=Digital Experience Manager unterstützt externalisierung von Daten (Modules, JCR Repository, Datastore, Indexes etc.) und Konfiguration um die Runtime-Daten und die Konfiguration von der Web Anwendung zu trennen.
+externalizedDataAndConfig.description=Jahia unterstützt externalisierung von Daten (Modules, JCR Repository, Datastore, Indexes etc.) und Konfiguration um die Runtime-Daten und die Konfiguration von der Web Anwendung zu trennen.
 installation.chooseType=Hier können Sie Ihre bevorzugte Art der Installation wählen:
 installation.title=Installationstyp
 installation.type.advanced=Benutzerdefinierte Installation (fortgeschritten)
-installation.type.advanced.info=<html>Installiert Digital Experience Manager nach Ihren Anforderungen und der Zielumgebung (Anwendungsserver und JVM-Einstellungen, Datenbank, usw.)</html>
+installation.type.advanced.info=<html>Installiert Jahia nach Ihren Anforderungen und der Zielumgebung (Anwendungsserver und JVM-Einstellungen, Datenbank, usw.)</html>
 installation.type.express=Schnellinstallation
-installation.type.express.info=<html>Entdecken Sie Digital Experience Manager ohne spezifischer Konfiguration dank der Installation eines Apache Tomcat 9 Server & Sun Java DB / Apache Derby DBMS-Bundles. Diese Installation beinhaltet auch alle interessanten und verfügbaren Module, Apps und Vorlagen.</html>
+installation.type.express.info=<html>Entdecken Sie Jahia ohne spezifischer Konfiguration dank der Installation eines Apache Tomcat 9 Server & Sun Java DB / Apache Derby DBMS-Bundles. Diese Installation beinhaltet auch alle interessanten und verfügbaren Module, Apps und Vorlagen.</html>
 karaf.remoteShell.port=SSH Console Port (*)
 karaf.remoteShell.port.validator=SSH Console Port ist ein Pflichtfeld und sollte eine gültige TCP Port-Nummer enthalten
 mailSettings.administrator=Mail-Administrator (Empfänger)
