--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_fr.properties
@@ -1,4 +1,4 @@
-core=Digital Experience Manager + Jahia Core Content Platform
-core.description=Suite logicielle Jahia (application seule) incluant Digital Experience Manager, Jahia Core Content Platform et, selon les options de déploiement sélectionnées nos JahiApps, templates, modules et le Jahia Studio.
+core=Jahia + Jahia Core Content Platform
+core.description=Suite logicielle Jahia (application seule) incluant Jahia, Jahia Core Content Platform et, selon les options de déploiement sélectionnées nos JahiApps, templates, modules et le Jahia Studio.
 tomcat=Ajouter Apache Tomcat - répertoire d'installation complet
-tomcat.description=Désélectionner cette option afin de générer un package ne contenant que l'application seule destinée à un serveur d'application précis. En cochant cette option, vous obtiendrez un répertoire d'installation complet (incluant Apache Tomcat) et pourrez démarrer votre instance de Digital Experience Manager immédiatement après la fin de cet assistant d'installation.
+tomcat.description=Désélectionner cette option afin de générer un package ne contenant que l'application seule destinée à un serveur d'application précis. En cochant cette option, vous obtiendrez un répertoire d'installation complet (incluant Apache Tomcat) et pourrez démarrer votre instance de Jahia immédiatement après la fin de cet assistant d'installation.
