--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
@@ -1,6 +1,6 @@
 afterInstall.description=Installation réussie
-afterInstall.launchJahia=Lancer un navigateur après le démarrage de Digital Experience Manager
-afterInstall.startTomcat=Démarrer le serveur Digital Experience Manager
+afterInstall.launchJahia=Lancer un navigateur après le démarrage de Jahia
+afterInstall.startTomcat=Démarrer le serveur Jahia
 afterInstall.title=Installation
 afterInstall.viewHowToInstall=Ouvrez le fichier d'aide à l'installation
 appServer.ajpPort=port de connexion AJP (*)
@@ -46,9 +46,9 @@ externalizedData.path=Répertoire de données d'exécution
 installation.chooseType=Vous pouvez choisir votre type d'installation préférée:
 installation.title=Type d'installation
 installation.type.advanced=Installation personnalisée (avancée)
-installation.type.advanced.info=<html>Déployez Digital Experience Manager selon votre environnement cible (paramétrage du serveur d'application, de la base de données, de la JVM etc.)</html>
-installation.type.express=Découvrez Digital Experience Manager
-installation.type.express.info=<html>Déployez Digital Experience Manager sans configuration particulière grace à l'installation d'un package regroupant un serveur Apache Tomcat 9 ainsi qu'une base de données Sun Java DB / Apache Derby. Cette installation installe également tous les modules, applications et templates existants et présentant un intérêt fonctionnel dans ce cadre.</html>
+installation.type.advanced.info=<html>Déployez Jahia selon votre environnement cible (paramétrage du serveur d'application, de la base de données, de la JVM etc.)</html>
+installation.type.express=Découvrez Jahia
+installation.type.express.info=<html>Déployez Jahia sans configuration particulière grace à l'installation d'un package regroupant un serveur Apache Tomcat 9 ainsi qu'une base de données Sun Java DB / Apache Derby. Cette installation installe également tous les modules, applications et templates existants et présentant un intérêt fonctionnel dans ce cadre.</html>
 karaf.remoteShell.port=Port de console SSH (*)
 karaf.remoteShell.port.validator=Le port de console SSH est obligatoire et doit être un port TCP valide
 mailSettings.administrator=Adresse de l'admin (destinataire)
