BACKLOG-10463: DX rebranding
Updated packsLang_xx.properties

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_de.properties
@@ -1,4 +1,5 @@
-core=Jahia + Jahia Core Content Platform
-core.description=Jahia Software Suite (nur Anwendungspaket) einschließlich Jahia, Jahia Core Content Platform und, nach ausgewählten Deployment-Optionen, unsere JahiApps, templates, modules und Jahia Studio.
+core=Jahia Core Platform + JContent
+core.description=Jahia Software Suite (nur Anwendungspaket) einschließlich Jahia Core Platform, JContent web content management system \
+  und, nach ausgewählten Deployment-Optionen, unsere JahiApps, templates, modules und Jahia Studio.
 tomcat=Apache Tomcat - komplettes Installationsverzeichnis erzeugen
 tomcat.description=Deaktivieren Sie diese Option, um ein eigenständiges Anwendungspaket für einen bestimmten Anwendungsserver zu erzeugen. Wenn diese Option aktiviert ist, wird eine vollständige Installation gemacht (Apache Tomcat wird auch mitinstalliert). Ihre persönliche Jahia Instanz kann direkt nach der Fertigstellung dieses Installationsassistenten gestartet werden.
