BACKLOG-10593: Updated installer labels

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_de.properties
@@ -1,5 +1,7 @@
 core=Jahia Core Platform + JContent
-core.description=Jahia Software Suite (nur Anwendungspaket) einschließlich Jahia Core Platform, JContent web content management system \
-  und, nach ausgewählten Deployment-Optionen, unsere JahiApps, templates, modules und Jahia Studio.
+core.description=Die Jahia-Plattform (Application-Only-Paket), inkludiert die Jahia Core Plattform, das JContent \
+  Webcontentmanagement-System, und abhängig von der gewählten Installationsoption, weitere Module und/oder das Studio.
 tomcat=Apache Tomcat - komplettes Installationsverzeichnis erzeugen
-tomcat.description=Deaktivieren Sie diese Option, um ein eigenständiges Anwendungspaket für einen bestimmten Anwendungsserver zu erzeugen. Wenn diese Option aktiviert ist, wird eine vollständige Installation gemacht (Apache Tomcat wird auch mitinstalliert). Ihre persönliche Jahia Instanz kann direkt nach der Fertigstellung dieses Installationsassistenten gestartet werden.
+tomcat.description=Deaktivieren Sie diese Option, um ein eigenständiges Anwendungspaket für einen bestimmten Anwendungsserver zu erzeugen. \
+  Wenn diese Option aktiviert ist, wird eine vollständige Installation gemacht (Apache Tomcat wird auch mitinstalliert). Ihre persönliche \
+  Jahia Instanz kann direkt nach der Fertigstellung dieses Installationsassistenten gestartet werden.
