--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_fr.properties
@@ -1,5 +1,7 @@
 core=Jahia Core Platform + JContent
-core.description=Suite logicielle Jahia (application seule) incluant le coeur de la platforme Jahia, le système de gestion de contenu \
-  web JContent et, selon les options de déploiement sélectionnées nos JahiApps, templates, modules et le Jahia Studio.
+core.description=La plateforme Jahia (application seule), incluant le coeur de la platforme Jahia, le système de gestion de contenu \
+  web JContent et, selon les options d'installation choisies, des modules additionnels et/ou le Studio.
 tomcat=Ajouter Apache Tomcat - répertoire d'installation complet
-tomcat.description=Désélectionner cette option afin de générer un package ne contenant que l'application seule destinée à un serveur d'application précis. En cochant cette option, vous obtiendrez un répertoire d'installation complet (incluant Apache Tomcat) et pourrez démarrer votre instance de Jahia immédiatement après la fin de cet assistant d'installation.
+tomcat.description=Désélectionner cette option afin de générer un package ne contenant que l'application seule destinée à un serveur \
+  d'application précis. En cochant cette option, vous obtiendrez un répertoire d'installation complet (incluant Apache Tomcat) et pourrez \
+  démarrer votre instance de Jahia immédiatement après la fin de cet assistant d'installation.
