BACKLOG-10593: Fixed typo in label

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_fr.properties
@@ -1,5 +1,5 @@
 core=Jahia Core Platform + JContent
-core.description=La plateforme Jahia (application seule), incluant le coeur de la platforme Jahia, le système de gestion de contenu \
+core.description=La plateforme Jahia (application seule), incluant le coeur de la plateforme Jahia, le système de gestion de contenu \
   web JContent et, selon les options d'installation choisies, des modules additionnels et/ou le Studio.
 tomcat=Ajouter Apache Tomcat - répertoire d'installation complet
 tomcat.description=Désélectionner cette option afin de générer un package ne contenant que l'application seule destinée à un serveur \
