BACKLOG-10745: update jahia jContent mention

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_en.properties
@@ -1,5 +1,5 @@
-core=Jahia Core Platform + JContent
-core.description=The Jahia platform (application-only package), including the Jahia Core Platform, JContent web content management \
+core=Jahia Core Platform + jContent
+core.description=The Jahia platform (application-only package), including the Jahia Core Platform, jContent web content management \
   system, and depending on the chosen installation options, additional modules and/or the Studio.
 tomcat=Add Apache Tomcat - generate a complete installation folder
 tomcat.description=Uncheck this option to generate a standalone application package for a specific application server. When this option is \
