--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_de.properties
@@ -1,5 +1,5 @@
-core=Jahia Core Platform + JContent
-core.description=Die Jahia-Plattform (Application-Only-Paket), inkludiert die Jahia Core Plattform, das JContent \
+core=Jahia Core Platform + jContent
+core.description=Die Jahia-Plattform (Application-Only-Paket), inkludiert die Jahia Core Plattform, das jContent \
   Webcontentmanagement-System, und abhängig von der gewählten Installationsoption, weitere Module und/oder das Studio.
 tomcat=Apache Tomcat - komplettes Installationsverzeichnis erzeugen
 tomcat.description=Deaktivieren Sie diese Option, um ein eigenständiges Anwendungspaket für einen bestimmten Anwendungsserver zu erzeugen. \
