--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_fr.properties
@@ -1,6 +1,6 @@
-core=Jahia Core Platform + JContent
+core=Jahia Core Platform + jContent
 core.description=La plateforme Jahia (application seule), incluant le coeur de la plateforme Jahia, le système de gestion de contenu \
-  web JContent et, selon les options d'installation choisies, des modules additionnels et/ou le Studio.
+  web jContent et, selon les options d'installation choisies, des modules additionnels et/ou le Studio.
 tomcat=Ajouter Apache Tomcat - répertoire d'installation complet
 tomcat.description=Désélectionner cette option afin de générer un package ne contenant que l'application seule destinée à un serveur \
   d'application précis. En cochant cette option, vous obtiendrez un répertoire d'installation complet (incluant Apache Tomcat) et pourrez \
