BACKLOG-12123: Remove DB version display (#59)

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
@@ -32,9 +32,9 @@ dbSettings.dbms.createTables=Datenbank Tabellen erstellen
 dbSettings.dbms.storeFilesInDB=Binärdateien in der Datenbank speichern
 dbSettings.dbms.title=Datenbankeinstellungen
 dbSettings.dbms.type=Wählen Sie Ihren Datenbanktyp aus
-dbSettings.dbms.type.mysql=MySQL 5.x
-dbSettings.dbms.type.postgresql=PostgreSQL 9.x
-dbSettings.dbms.type.mariadb=MariaDB 10.x
+dbSettings.dbms.type.mysql=MySQL
+dbSettings.dbms.type.postgresql=PostgreSQL
+dbSettings.dbms.type.mariadb=MariaDB
 dbSettings.mode.embedded=Embedded Sun Java DB / Apache Derby Datenbank-Engine
 dbSettings.mode.standalone=Standalone DBMS
 dbSettings.title=Datenbankeinstellungen
