--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
@@ -34,9 +34,9 @@ dbSettings.dbms.createTables=Create required database tables
 dbSettings.dbms.storeFilesInDB=Store binary data in the database
 dbSettings.dbms.title=Database connection settings
 dbSettings.dbms.type=Choose your DBMS type
-dbSettings.dbms.type.mariadb=MariaDB 10.x
-dbSettings.dbms.type.mysql=MySQL 5.x
-dbSettings.dbms.type.postgresql=PostgreSQL 9.x
+dbSettings.dbms.type.mariadb=MariaDB
+dbSettings.dbms.type.mysql=MySQL
+dbSettings.dbms.type.postgresql=PostgreSQL
 dbSettings.mode.embedded=Embedded Sun Java DB / Apache Derby database engine
 dbSettings.mode.standalone=Standalone DBMS
 dbSettings.title=Database connection settings
