--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
@@ -32,9 +32,9 @@ dbSettings.dbms.createTables=Créer les tables dans la base
 dbSettings.dbms.storeFilesInDB=Stockage des binaires dans la base
 dbSettings.dbms.title=Configuration SGBD
 dbSettings.dbms.type=Sélectionnez votre type de base
-dbSettings.dbms.type.mariadb=MariaDB 10.x
-dbSettings.dbms.type.mysql=MySQL 5.x
-dbSettings.dbms.type.postgresql=PostgreSQL 9.x
+dbSettings.dbms.type.mariadb=MariaDB
+dbSettings.dbms.type.mysql=MySQL
+dbSettings.dbms.type.postgresql=PostgreSQL
 dbSettings.mode.embedded=Base embarquée Sun Java DB / Apache Derby
 dbSettings.mode.standalone=SGBD autonome
 dbSettings.title=Configuration SGBD
